# order-microservice

./: CONTRIBUTING.md  Makefile  README.md  api-spec.yaml  compose.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: adding-a-language.md
implementations/cpp/: CMakeLists.txt  Dockerfile  Makefile
implementations/cpp/src/: main.cpp
implementations/go/: .env.example  Dockerfile  Makefile  README.md  go.mod  go.sum
implementations/go/cmd/server/: main.go
implementations/go/db/migrations/: 000001_create_orders.up.sql
implementations/go/internal/application/: create_order.go  get_order.go  list_orders.go  update_order_status.go
implementations/go/internal/domain/: errors.go  order.go  order_item.go  order_repository.go
implementations/java/: Dockerfile  Makefile  build.gradle  settings.gradle
implementations/kotlin/: Dockerfile  Makefile  build.gradle.kts  settings.gradle.kts
implementations/nodejs/: Dockerfile  Makefile  package-lock.json  package.json  tsconfig.json
implementations/nodejs/src/: server.ts
implementations/python/: Dockerfile  Makefile  requirements.txt
implementations/python/app/: main.py
implementations/python/tests/: test_domain.py
implementations/rust/: Cargo.toml  Dockerfile  Makefile
implementations/rust/src/: main.rs
implementations/scala/: .scalafmt.conf  Dockerfile  Makefile  build.sbt
shared/contract-tests/: orders-contract.test.mjs
shared/db/migrations/: 000001_create_orders.up.sql  000002_create_order_items.up.sql  000003_create_idempotency_keys.up.sql
(+21 files in other folders)
